--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -41,7 +41,7 @@ The view required that the user's own state information (such as status and nick
 
 \subsection {Viewer}
 
-After some interface design work (which will be discussed in coming sections), it was apparent that the system had to support two different styles of chat windows: a group chat and a chat with a single user. However, there were some observable commonalities between both windows, such as sending messages, displaying incoming messages, and using very similar Java Swing components to handle this functionality. At the same time, there was enough differing behaviour between the two windows to justify having two different classes to handle them, such as the group chat's need to maintain a list of users in the room. With this in mind, we designed our class structure code dealing with the interface to have a super class named ChatWindow, outlining this common functionality, which two sub classes called GroupChatWindow and SingleChatWindow which would extend this super class. [except we chose this later, initially they were the same class, then separate classes, then a super->sub class pattern... another change to discuss, maybe?]
+After some interface design work (which will be discussed in coming sections), it was apparent that the system had to support two different styles of chat windows: a group chat and a chat with a single user. However, there were some observable commonalities between both windows, such as sending messages, displaying incoming messages, and using very similar Java Swing components to handle this functionality. At the same time, there was enough differing behaviour between the two windows to justify having two different classes to handle them, such as the group chat's need to maintain a list of users in the room. With this in mind, we designed our class structure code dealing with the interface to have a super class named ChatWindow, outlining this common functionality, which two sub classes called GroupChatWindow and SingleChatWindow which would extend this super class. [except we chose this later, initially they were the same class, then separate classes, then a super->sub class pattern... another change to discuss, maybe?]%footnote for java swing?
 
 We anticipated this would be advantageous as it would reduce the repetition of code and keep functionality consistent between the two windows. We felt in particular that the panel displaying incoming images would change in formatting messages, as the project would evolve to include some of our possible features, such as the implementation of emoticons and font colours (See section x.y). [this last sentence is confusing... reword?]
 
