--- a/TP3/dissertation/Conclusion/reflective.tex
+++ b/TP3/dissertation/Conclusion/reflective.tex
@@ -1,7 +1,7 @@
 \section{Reflective}
 Over the course of this project, we've all learned a lot as a team. Early on, we had a sort of `laissez-faire' style of team management, with no one in particular in charge. We had few strict roles among us either, though a few had been decided. Gordon was willing to be secretary and take meeting minutes, and Heather was experienced with writing and editing, as well as being good at organisation, so she took the role of Quality Assurance. While we were designing the project though, we didn't have any other defined roles.
 
-As we progressed further into the design, it was clear we needed to split up the work in a manageable way if we wanted things to be fair. We decided to have Gordon and James work on the server and Ewan and Heather to work on the client and corresponding GUI. This worked well, since James and Gordon had more of an interest in networking, and Ewan and Heather were more experienced with making GUIs. Soon we found we hadn't made a clear line between the server and client work, and thus some of the networking code was split between the two smaller teams. The client team would have had a lot more work than the server team, considering how much networking code it involved. We then came up with the idea of the interfaces\footnote{}, which helped more precisely define the work boundary between the two teams. The server team implemented methods that the client would call, and the client team implemented methods that the server would call. This more fairly split up the work and made it manageable.
+As we progressed further into the design, it was clear we needed to split up the work in a manageable way if we wanted things to be fair. We decided to have Gordon and James work on the server and Ewan and Heather to work on the client and corresponding GUI. This worked well, since James and Gordon had more of an interest in networking, and Ewan and Heather were more experienced with making GUIs. Soon we found we hadn't made a clear line between the server and client work, and thus some of the networking code was split between the two smaller teams. The client team would have had a lot more work than the server team, considering how much networking code it involved. We then came up with the idea of the interfaces\footnote{see gordon's design section}, which helped more precisely define the work boundary between the two teams. The server team implemented methods that the client would call, and the client team implemented methods that the server would call. This more fairly split up the work and made it manageable.
 
 Over the first term, we met weekly as a team, in addition to our meetings with our supervisor. These supervisor meetings in particular helped us stay on track, since we went over what we did each week and then discussed our plans for the following weeks. The meetings also gave us formative feedback about our approach to the project and the dissertation. We likely would have been more disorganised without them. The team meetings were helpful too, as we all focused at the same time, in person, on what had to be done that week.
 
