--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -44,4 +44,4 @@ In retrospect, the trade off between keeping an abstract protocol (which could b
 
 As described in the design section, a requirement from the client model was to store information about users.\footnote{reference goes here} During the early stages of the implementation, it was believed it would be sufficient to get display the the user's nickname in a chat window, by polling the 'User' list stored in the model any time a message was received. However, as the implementation progressed it became clear that many areas on the interface dynamically updated friend information - including the contact list, group chat window, and single chat window. As the implementation of these interface features was gradual, the original approach was to update each area of the interface in isolation whenever the server alerted the client of a change. We encountered problems with this approach when an error was encountered which caused the client to go into an infinate loop of being informed there was an update to a user's information, then sending a request to the server to receive this update. The behaviour of updating informational was coupled across many classes, and it was therefor difficult to track down the source of the problem. As the team became familiar with swing, it was realised that the behaviour could be uncoupled to a degree by implementing swing's 'listener' interface on the User collection in the model, where content was dynamic. This meant that any time user information changed, the listener event would update the interface in any place neccessary. This change successfully made our code more scalable, as it is possible in future development information about friends may be displayed on other windows. Furthermore, it increased the ease of maintenaince, as when we changed the implementation of the buddy list, we only had to change what actions our listener class within the contact list class on an update, rather than the previously coupled classes. 
 
-A further significant evolution in our code, also centered around out use of swing, was a need to overcome a significant problem with rendering the contact list. As a contact list naturally follows a tree structure, where there are branches arranged by status, or group name, we thought the swing 'JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like 'branches', which is suitable for when contacts are added, or removed, or change status.  However, we experienced rendering problems with the JTree component in swing across different platforms. On windows based platforms, friend elements in the JList SQUIDGED TOGETHER...
+A further significant evolution in our code, also centered around out use of swing, was a need to overcome a significant problem with rendering the contact list. As a contact list naturally follows a tree structure, where there are branches arranged by status, or group name, we thought the swing 'JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like 'branches', which is suitable for when contacts are added, or removed, or change status.  However, we experienced rendering problems with the JTree component in swing across different platforms. On windows based platforms, friend elements were pushed together, and ruined the appearance of the contact list.  After significant hours of work to attempt to sort these rendering issues, we investigated using JLists instead. [write about writing own renderer, write about merits of JLists compared to JTrees.]
