--- a/TP3/dissertation/dissertation.tex
+++ b/TP3/dissertation/dissertation.tex
@@ -1,11 +1,12 @@
 \documentclass{l3proj}
+\usepackage{lscape}
 \begin{document}
 \title{GIM - Team G Instant Messenger}
 \author{Ewan Baird \\
 Heather Hoaglund-Biron \\
 Gordon Martin \\
 James McMinn}
-\date{28 March 2011}
+\date{21 March 2011}
 \maketitle
 \begin{abstract}
 
