Added a bit to the conclusion, and got rid of the contributions section as well as the section headings for "introduction" and "conclusion."

--- a/TP3/dissertation/Conclusion/reflective.tex
+++ b/TP3/dissertation/Conclusion/reflective.tex
@@ -1,5 +1,6 @@
-\section{Reflective}
-Over the course of this project, we've all learned a lot as a team. Early on, we had a sort of `laissez-faire' style of team management, with no one in particular in charge. We had few strict roles among us either, though a few had been decided. Gordon was willing to be secretary and take meeting minutes, and Heather was experienced with writing and editing, as well as being good at organisation, so she took the role of Quality Assurance. While we were designing the project though, we didn't have any other defined roles.
+Over the course of this project, we've all learned a lot as a team. The importance of communication and organisation, the design decisions required of a large project, and how to split up work fairly. We've also learned more about networking and making GUIs in Java Swing. The following is a more in-depth discussion of how the project went for us.
+
+Early on, we had a sort of `laissez-faire' style of team management, with no one in particular in charge. We had few strict roles among us either, though a few had been decided. Gordon was willing to be secretary and take meeting minutes, and Heather was experienced with writing and editing, as well as being good at organisation, so she took the role of Quality Assurance. While we were designing the project though, we didn't have any other defined roles.
 
 As we progressed further into the design, it was clear we needed to split up the work in a manageable way if we wanted things to be fair. We decided to have Gordon and James work on the server and Ewan and Heather to work on the client and corresponding GUI. This worked well, since James and Gordon had more of an interest in networking, and Ewan and Heather were more experienced with making GUIs. Soon we found we hadn't made a clear line between the server and client work, and thus some of the networking code was split between the two smaller teams. The client team would have had a lot more work than the server team, considering how much networking code it involved. We then came up with the idea of the interfaces\footnote{see gordon's design section}, which helped more precisely define the work boundary between the two teams. The server team implemented methods that the client would call, and the client team implemented methods that the server would call. This more fairly split up the work and made it manageable.
 
